# PhotoShare

./: .gitignore  Dockerfile  Dockerfile-without-venv  Dockerfile_curl  README.md  READMY.md  docker-compose.yml  entrypoint.sh  pyproject.toml
dj_project/: createsuperuser.py  group.py
dj_project/dj_project/: settings.py  urls.py
dj_project/photo_share/: admin.py  apps.py  models.py  serializer.py  views.py
dj_project/photo_share/migrations/: 0001_initial.py  0002_alter_photo_tags.py  0003_alter_comment_unique_together.py
dj_project/posts/: admin.py  models.py  permission.py  serializer.py  urls.py  views.py
dj_project/posts/migrations/: 0001_initial.py  0002_initial.py
dj_project/user_auth/: admin.py  models.py  permission.py  serializer.py  tests.py  urls.py  views.py
dj_project/user_auth/migrations/: 0001_initial.py
nginx/: default.conf  photo_share.conf
