[tool.poetry]
name = "dj-project"
version = "0.1.0"
description = ""
authors = ["yana <begemotvot2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
